# astra.launch

./: .gitignore  Pulumi.dev.yaml  Pulumi.yaml  README.md  biome.json  index.html  index.ts  package-lock.json  package.json
backend/: Dockerfile  Makefile  config.py  deploy.sh  helpers.py  infra.py  pyproject.toml  server.py  tasks.py
frontend/: package-lock.json  package.json
frontend/src/: index.css  main.tsx  routeTree.gen.ts
frontend/src/components/: empty-dashboard.tsx  empty-nodes.tsx  error.tsx  log-entry.tsx
frontend/src/components/ui/: alert.tsx  toast.tsx
frontend/src/lib/: api.ts
frontend/src/routes/: __root.tsx  dashboard.settings.tsx  dashboard.tsx  dashboard.validators.$validatorId.tsx  dashboard.validators.index.tsx
src/: main.tsx  wagmi.ts
src/components/ui/: dialog.tsx
src/routes/: __root.tsx  dashboard.settings.tsx  dashboard.tsx  dashboard.validators.$validatorId.tsx  dashboard.validators.index.tsx  index.tsx
